language/move-lang/tests/move_check/typing/main_return_type_invalid.move
fun main(): u64 {
    0
}
